--- a/src/css/containt.css
+++ b/src/css/containt.css
@@ -6,6 +6,7 @@
 .containt-container {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     /* margin: auto; */
 }
 
@@ -60,6 +61,7 @@
     .containt-container {
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
 
     .heading-text {
