--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -73,8 +73,8 @@ input[type=checkbox] {
 
 .center-image-home {
     object-fit: fill;
-    height: 80%;
-    width: 100%;
+    height: 70%;
+    width: 70%;
 }
 
 .logo{
@@ -90,6 +90,8 @@ input[type=checkbox] {
     border: 1px solid #ffb400;
     cursor: pointer;
     color: white;
+    width: 70%;
+    font-size: 20px;
 }
 
 @media screen and (max-width: 480px) {
