--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -40,7 +40,7 @@
 }
 
 .footer-menu > li > a{
-    padding: 20px;
+    margin: 20px;
     font-size: 16px;
     color: white;
 }
@@ -94,7 +94,7 @@
     } */
     
     .footer-menu > li > a{
-        padding: 20px;
+        margin: 20px;
         font-size: 18px;
         color: white;
     }
