--- a/src/css/containt.css
+++ b/src/css/containt.css
@@ -15,7 +15,8 @@
     text-align: center;
     font-size: 45px;
     font-weight: bold;
-    color: #ffb400;
+    /*color: #ffb400;*/
+    color: #103B1D;
     margin-top: 20px;
 }
 
@@ -48,7 +49,8 @@
     margin: 20px;
     padding: 20px;
     box-shadow: 0 1px 10px 0 rgba(216, 200, 56, 0.19);
-    background-color: #ffb400;
+    /*background-color: #ffb400;*/
+    background-color: #103B1D;
     color: white;
 }
 
@@ -71,7 +73,8 @@
         margin: 20px;
         letter-spacing: 3px;
         font-weight: bold;
-        color: #ffb400;
+        /*color: #ffb400;*/
+        color: #103B1D;
     }
 
     .experties-container{
